# mat496-projects

./: README.md  lotr.txt  lotr_rag.py  pyproject.toml
lotr_rag/: main.py
